# slack-emoji-tailor

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.dev.deploy.yml  docker-compose.yml  pyproject.toml
.cursor/: .gitignore
.cursor/review/: run-codex-review.cmd  run-cursor-review.cmd  run-review-gate.cmd
.cursor/rules/: 00-core-always-apply.mdc
app/: main.py  schemas.py  versioning.py
app/services/: converter_adapter.py  converter_core.py
app/static/: app.js  style.css
app/templates/: index.html
docs/deploy/: jenkins-dev-security-checklist.md  jenkins-dev.md
scripts/: benchmark_convert.py  verify_webapp_screenshots.py
scripts/deploy/: jenkins-enm-deploy.sh  jenkins-enm-rollback.sh  public-gif-smoke.sh
tests/: test_api_convert.py  test_api_inspect.py  test_converter_adapter.py  test_converter_core.py  test_deploy_artifacts_static.py  test_server_options.py  test_ui_static.py  test_versioning.py
